--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .btn-link { color: #000; }
 button.btn.btn-sm.btn-link.active {font-weight: 700;color: orange;}
-
+button.btn.btn-sm.btn-link:hover {color: orange; text-decoration: none;}
+nav .nav-link {color: #000;}
+nav .nav-link:hover {color: orange;}
 .card {
  border: 1px solid transparent;
 border-radius: 0; 
