--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*NAVBAR*/
 .btn-link { color: #000; }
-button.btn.btn-sm.btn-link.active {font-weight: 700;color: orange;}
-button.btn.btn-sm.btn-link:hover {color: orange; text-decoration: none;}
+button.btn.btn-sm.btn-link.active {font-weight: 700;color: #f24f16;}
+button.btn.btn-sm.btn-link:hover {color: #f24f16; text-decoration: none;}
 nav .nav-link {color: #000;}
-nav .nav-link:hover {color: orange;}
-.btn-warning:hover { background: #fff; color: orange; }
+nav .nav-link:hover {color: #f24f16;}
+.btn-warning:hover { background: #fff; color: #f24f16; }
 .brand ul { display: inline; text-decoration: none; }
 .brand ul.li { display: inline; }
 
@@ -20,6 +20,7 @@ border-radius: 0;
 
 h2 { margin: 25% auto; }
 .card-columns i.fa { color: #fff;font-size: 1.5rem; margin-top: 15%; }
+i.fa:hover {color:#f24f16;}
 
 /*SUBSCRIBE*/
 .subscribe {
@@ -32,9 +33,8 @@ h2 { margin: 25% auto; }
 /*FOOTER*/
 footer { padding: 5%; }
 footer h6 { padding: 1% 0; }
-footer h6:hover { color: orange; }
+footer h6:hover { color: #f24f16; }
 footer i.fa {color: #000; margin: 0 5%;}
-footer i.fa:hover { color: orange; }
 .info4 img {
     max-width: 100%;
     width: 100px;
