--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body { font-family: 'Montserrat', sans-serif; }
+body, .btn { font-family: 'Montserrat', sans-serif; }
+
 
 /*NAVBAR*/
 .btn-link { color: #000; }
