--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ i.fa:hover {color:#f24f16;}
 
 /*SUBSCRIBE*/
 .subscribe {
-    background: grey;
+    background: url('https://www.pexels.com/photo/yellow-steel-bathtub-1630344/';
     background-size: cover;
     background-position: center center;
     height: 300px;
