--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ i.fa:hover {color:#f24f16;}
 
 /*SUBSCRIBE*/
 .subscribe {
-    background: orange;
+    background-color: orange;
     background-size: cover;
     background-position: center center;
     height: 300px;
