--- a/style.css
+++ b/style.css
@@ -28,15 +28,15 @@ i.fa:hover {color:#f24f16;}
 
 /*SUBSCRIBE*/
 .subscribe {
-    background: orange;
-    background-position: center;
+    background: url('https://images.pexels.com/photos/1964869/pexels-photo-1964869.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
     background-size: cover;
+    background-position: center center;
     height: 300px;
+    opacity: .8;
 }
 
 .subscribe form {
  padding-top: 5%!important;
- color: black;
 }
 
 /*FOOTER*/
