--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ i.fa:hover {color:#f24f16;}
 
 /*SUBSCRIBE*/
 .subscribe {
-    background: url('https://images.pexels.com/photos/1964869/pexels-photo-1964869.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background: orange;
     background-size: cover;
     background-position: center center;
     height: 300px;
